Changed startup and added dbSeeder

--- a/SKShoeAndSports.Web/Areas/Customer/Views/Home/Index.cshtml
+++ b/SKShoeAndSports.Web/Areas/Customer/Views/Home/Index.cshtml
@@ -51,7 +51,7 @@
                                 <h4 class="card-title" style="color:magenta">
                                     @product.Brand.Name @product.Name
                                 </h4>
-                                <h5>@product.Price.ToString("c")</h5>
+                                <h5>Up to @product.Price.ToString("c")</h5>
                                 <p class="card-text">@product.Description</p>
                                 
                             </div>
