--- a/SKShoeAndSports.Web/Areas/Customer/Views/Home/ProductDetails.cshtml
+++ b/SKShoeAndSports.Web/Areas/Customer/Views/Home/ProductDetails.cshtml
@@ -45,7 +45,7 @@
                     <dt class="col-sm-5">Product Type</dt>
                     <dd class="col-sm-7">@Model.Product.ProductType.Name</dd>
 
-                    <dt class="col-sm-5">Price</dt>
+                    <dt class="col-sm-5">Standard Price</dt>
                     <dd class="col-sm-7">
                         @Model.Product.Price.ToString("c")
 
