Added Paginated List

--- a/SKShoeAndSports.Web/Areas/Customer/Views/Basket/Index.cshtml
+++ b/SKShoeAndSports.Web/Areas/Customer/Views/Basket/Index.cshtml
@@ -40,6 +40,8 @@
                                     <div class="col-12 text-sm-center col-lg-6 text-lg-left">
                                         <h5><strong>@item.ProductVariant.Product.Brand.Name @item.ProductVariant.Product.Name</strong></h5>
                                         <p><small>@item.ProductVariant.Product.Description</small></p>
+                                        <p><small>Size: @item.ProductVariant.Size.Name</small></p>
+                                        <p><small>Colour: @item.ProductVariant.Colour.Name</small></p>
                                     </div>
                                     <div class="col-12 text-sm-center col-lg-5 text-lg-right row">
                                         <div class="col-4 text-md-right" style="padding-top:5px;">
