--- a/SKShoeAndSports.Web/Areas/Customer/Views/Home/CategoryList.cshtml
+++ b/SKShoeAndSports.Web/Areas/Customer/Views/Home/CategoryList.cshtml
@@ -49,6 +49,11 @@
                         </div>
                     </div>
                 }
+                <div page-model="@Model.Paging" page-classes-enabled="true" page-class="btn border"
+                     page-class-normal="btn btn-light" page-class-selected="btn btn-info active"
+                     class="btn-group float-right">
+
+                </div>
             }
             else
             {
