--- a/SKShoeAndSports.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/SKShoeAndSports.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -86,7 +86,7 @@
                 {
                     <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
                         <p>
-                            By clicking <em>Register</em> you agreee to our <a href="" target="_blank">terms of conditions</a>
+                            By clicking <em>Register</em> you agree to our <a href="" target="_blank">terms of conditions</a>
                         </p>
 
                         <hr />
